Replace mantra with bouncing emoticons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
             <div class="hero-illustration">
                 <div class="ganesha-illustration">
                     <div class="ganesha-circle">
-                        ॐ गं गणपतये नमः
+                        <div class="floating-emojis">
+                            <span class="emoji elephant">🐘</span>
+                            <span class="emoji om">🕉️</span>
+                            <span class="emoji diya">🪔</span>
+                            <span class="emoji flower">🌸</span>
+                        </div>
                     </div>
                 </div>
             </div>
